# agentmail-examples

dinner-agent/: .env.example  .gitignore  README.md  cuisine_selector.py  dinner_agent.py  main.py  participant_tracker.py  pyproject.toml  requirements.txt  restaurant_booking.py
github-maintainer-agent/: .env.example  README.md  System_prompt.txt  main.py  maintiner-agent.md  requirements.txt  utils.py
